# drake-ros

.github/workflows/: bazelized_drake_ros.yml
drake_ros/: package.xml
drake_ros/core/: camera_info_system.h  rgbd_system.h
drake_ros/drake_ros/: BUILD.bazel
drake_ros_examples/: BUILD.bazel  CMakeLists.txt  package.xml
drake_ros_examples/examples/hydroelastic/: BUILD.bazel
drake_ros_examples/examples/iiwa_manipulator/: BUILD.bazel
drake_ros_examples/examples/multirobot/: BUILD.bazel
drake_ros_examples/examples/rgbd/: CMakeLists.txt  README.md  SyncCamerasPointCloud.cpp  rgbd.cc  sync_topics.py
drake_ros_examples/examples/rgbd/launch/: rgbd_launch.py
drake_ros_examples/examples/rs_flip_flop/: BUILD.bazel
ros2_example_bazel_installed/: WORKSPACE
ros2_example_bazel_installed/ros2_example_apps/: BUILD.bazel
